unpackaged/main/default/objects/Policy_Implementation__c/fields/LTD_Census_Shows_Occupation__c.field-meta.xml
<CustomField>
    <fullName>LTD_Census_Shows_Occupation__c</fullName>
    <description>This field showes the status of LTD Census Shows Occupation and contains information of Gate2</description>
    <label>LTD Census Shows Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>