unpackaged/main/default/objects/Policy_Implementation__c/fields/LTD_Census_Shows_Occupation_Date__c.field-meta.xml
<CustomField>
    <fullName>LTD_Census_Shows_Occupation_Date__c</fullName>
    <description>This field contains the date against LTD Census Shows Occupation field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LTD Census Shows Occupation Date</label>
    <type>DateTime</type>
</CustomField>