unpackaged/main/default/objects/Policy_Implementation__c/fields/LTD_Prior_Carrier_Info__c.field-meta.xml
<CustomField>
    <fullName>LTD_Prior_Carrier_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LTD+Prior Carrier Info</label>
    <length>1500</length>
    <type>Html</type>
</CustomField>