unpackaged/main/default/objects/Policy_Implementation__c/fields/LTD_W_2_Option_Marked_on_Master_App__c.field-meta.xml
<CustomField>
    <fullName>LTD_W_2_Option_Marked_on_Master_App__c</fullName>
    <description>This field contains Gate2 Information</description>
    <label>LTD W-2 Option Marked on Master App</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>