unpackaged/main/default/objects/Policy_Implementation__c/fields/LTD_W_2_Option_Marked_on_Master_App_Date__c.field-meta.xml
<CustomField>
    <fullName>LTD_W_2_Option_Marked_on_Master_App_Date__c</fullName>
    <description>This field contains the date against W-2 Option Marked on Master Application field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LTD W-2 Option Marked on Master App Date</label>
    <type>DateTime</type>
</CustomField>