unpackaged/main/default/objects/Policy_Implementation__c/fields/MA_PFML__c.field-meta.xml
<CustomField>
    <fullName>MA_PFML__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture products on Policy Implementation triage section</description>
    <label>MA PFML</label>
    <type>Checkbox</type>
</CustomField>