unpackaged/main/default/objects/Policy_Implementation__c/fields/Manager_QA_Review__c.field-meta.xml
<CustomField>
    <fullName>Manager_QA_Review__c</fullName>
    <description>Notes for manager QA Review</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager QA Review</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>