unpackaged/main/default/objects/Policy_Implementation__c/fields/Manager_Review__c.field-meta.xml
<CustomField>
    <fullName>Manager_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Review</label>
    <type>Checkbox</type>
</CustomField>