unpackaged/main/default/objects/Policy_Implementation__c/fields/Manager_Review_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Review_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Review Completion Date</label>
    <type>DateTime</type>
</CustomField>