unpackaged/main/default/objects/Policy_Implementation__c/fields/Manager_Who_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Manager_Who_Reviewed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Type in the Manager who Reviewed the case</description>
    <label>Manager Who Reviewed</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Policy_Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>