unpackaged/main/default/objects/Policy_Implementation__c/fields/Manger_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manger_Review_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Review Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>