unpackaged/main/default/objects/Policy_Implementation__c/fields/Master_App_Rcvd_On_Case_Create__c.field-meta.xml
<CustomField>
    <fullName>Master_App_Rcvd_On_Case_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Master application has been received when the case was created</inlineHelpText>
    <label>Submitted with Master App</label>
    <type>Checkbox</type>
</CustomField>