unpackaged/main/default/objects/Policy_Implementation__c/fields/Master_Application_Received__c.field-meta.xml
<CustomField>
    <fullName>Master_Application_Received__c</fullName>
    <description>This field showes the status of Master Application Received and contains information of Gate1</description>
    <label>Master Application Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>