unpackaged/main/default/objects/Policy_Implementation__c/fields/Master_Application_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Application_Received_Date__c</fullName>
    <description>This field contains Gate1 information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Master Application Signature Date</label>
    <type>DateTime</type>
</CustomField>