unpackaged/main/default/objects/Policy_Implementation__c/fields/Medical_Underwriting_EOI_MIB__c.field-meta.xml
<CustomField>
    <fullName>Medical_Underwriting_EOI_MIB__c</fullName>
    <description>This field contains Medical Underwriting Process if applicable, received
Evidence of Insurability form(s) (EOI), run MIB, and send to
Medical Underwriting.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Received Evidence of Insurability form(s) (EOI), run MIB, and send to
Medical Underwriting.</inlineHelpText>
    <label>Medical Underwriting/EOI/MIB</label>
    <type>TextArea</type>
</CustomField>