unpackaged/main/default/objects/Policy_Implementation__c/fields/Medical_Underwriting_EOI_MIB_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Underwriting_EOI_MIB_Date__c</fullName>
    <description>This field track date against Medical Underwriting Process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Underwriting/EOI/MIB Date</label>
    <type>DateTime</type>
</CustomField>