unpackaged/main/default/objects/Policy_Implementation__c/fields/Member_Applications_Voluntary_Product__c.field-meta.xml
<CustomField>
    <fullName>Member_Applications_Voluntary_Product__c</fullName>
    <description>This field showes the status of Member Applications Voluntary Product and contains information of Gate2</description>
    <label>Member Applications Voluntary Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>