unpackaged/main/default/objects/Policy_Implementation__c/fields/Member_Voluntary_Product_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Voluntary_Product_Date__c</fullName>
    <description>This field contains the date against Member Applications for Voluntary Products   field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Voluntary Product Date</label>
    <type>DateTime</type>
</CustomField>