unpackaged/main/default/objects/Policy_Implementation__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <defaultValue>&quot;•   Please @mention me when the Sold Plan Confirmation is ready for review.       &quot; + BR() + 
&quot;•   Please @mention PCCR and myself when the group is pushed to Compass.          &quot; + BR() +
&quot;•   ISM to notify Group_Underwriting_Renewals@usablelife.com of upsell once participation of new line of coverage is verified for potential discount or rate hold on enforce coverage.  &quot; + BR()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestones</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>