unpackaged/main/default/objects/Policy_Implementation__c/fields/Minimum_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Hours_Worked__c</fullName>
    <description>This field shows status of Minimum Hours Worked and contains Gate 2 Information</description>
    <label>Minimum Hours Worked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>