unpackaged/main/default/objects/Policy_Implementation__c/fields/Minimum_Hours_Worked_Date__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Hours_Worked_Date__c</fullName>
    <description>This field contains the date against Minimum Hours Worked   field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Minimum Hours Worked Date</label>
    <type>DateTime</type>
</CustomField>