unpackaged/main/default/objects/Policy_Implementation__c/fields/Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Name_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes a name change</description>
    <label>Name Change</label>
    <type>Checkbox</type>
</CustomField>