unpackaged/main/default/objects/Policy_Implementation__c/fields/NC_Bar__c.field-meta.xml
<CustomField>
    <fullName>NC_Bar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NC Bar</label>
    <type>Checkbox</type>
</CustomField>