unpackaged/main/default/objects/Policy_Implementation__c/fields/NC_Med_Society__c.field-meta.xml
<CustomField>
    <fullName>NC_Med_Society__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NC Med Society</label>
    <type>Checkbox</type>
</CustomField>