unpackaged/main/default/objects/Policy_Implementation__c/fields/No_Of_Lives_Complexity__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Lives_Complexity__c</fullName>
    <description>Calculate Number of Lives Complexity if online list is Selerix or Manual</description>
    <formula>IF(AND(OR(TEXT(Online_List__c) = &quot;Selerix&quot;,TEXT(Online_List__c) = &quot;Manual&quot;),   (Number_of_Lives__c &gt; 50)),0.5,0)+ 
IF (AND(OR(TEXT(Online_List__c) = &quot;Selerix&quot;,TEXT(Online_List__c) = &quot;Manual&quot;), 
(Number_of_Lives__c &gt; 100)),0.5,0)+ 
IF (AND(OR(TEXT(Online_List__c) = &quot;Selerix&quot;,TEXT(Online_List__c) = &quot;Manual&quot;), (Number_of_Lives__c &gt; 150)),0.5,0)+ 
IF (AND(OR(TEXT(Online_List__c) = &quot;Selerix&quot;,TEXT(Online_List__c) = &quot;Manual&quot;),
 (Number_of_Lives__c &gt; 200)),0.5,0)+ 
IF (AND(OR(TEXT(Online_List__c) = &quot;Selerix&quot;,TEXT(Online_List__c) = &quot;Manual&quot;),
 (Number_of_Lives__c &gt; 250)),0.5,0)+
IF (AND(OR(TEXT(Online_List__c) = &quot;Selerix&quot;,TEXT(Online_List__c) = &quot;Manual&quot;), 
  (Number_of_Lives__c &gt; 300)),0.5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Lives Complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>