unpackaged/main/default/objects/Policy_Implementation__c/fields/Number_of_Bill_Groups__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bill_Groups__c</fullName>
    <description>Total number of bill groups</description>
    <label>Number of Bill Groups</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>