unpackaged/main/default/objects/Policy_Implementation__c/fields/Number_of_Departments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Departments__c</fullName>
    <label>Number of Departments</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>