unpackaged/main/default/objects/Policy_Implementation__c/fields/Number_of_Lives__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lives__c</fullName>
    <description>This field contains the Number of live before the case get assigned to Group Issue Analyst.</description>
    <label>Number of Lives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>