unpackaged/main/default/objects/Policy_Implementation__c/fields/Number_of_Lives_Date__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lives_Date__c</fullName>
    <description>This field contains the date against Number of Lives Date field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Lives Date</label>
    <type>DateTime</type>
</CustomField>