unpackaged/main/default/objects/Policy_Implementation__c/fields/OldEffective_Date__c.field-meta.xml
<CustomField>
    <fullName>OldEffective_Date__c</fullName>
    <description>This field shows status of  Effective date and contains information of Gate2</description>
    <label>OldEffective Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>