unpackaged/main/default/objects/Policy_Implementation__c/fields/Online_List__c.field-meta.xml
<CustomField>
    <fullName>Online_List__c</fullName>
    <description>Select how billing will be done online</description>
    <inlineHelpText>Select which online billing will be done</inlineHelpText>
    <label>Online/List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Ntake</fullName>
            </value>
            <value>
                <fullName>Selerix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>