unpackaged/main/default/objects/Policy_Implementation__c/fields/Order_Policies_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Order_Policies_Certificates__c</fullName>
    <description>This field contains information regarding Order Policies/Certificates</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Order Policies/Certificates</inlineHelpText>
    <label>Order Policies/Certificates</label>
    <type>TextArea</type>
</CustomField>