unpackaged/main/default/objects/Policy_Implementation__c/fields/Order_Policies_Certificates_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Policies_Certificates_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Policies/Certificates Date</label>
    <type>DateTime</type>
</CustomField>