unpackaged/main/default/objects/Policy_Implementation__c/fields/Other_Changes__c.field-meta.xml
<CustomField>
    <fullName>Other_Changes__c</fullName>
    <description>Amendment has other changes not listed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Amendment has other changes not listed</inlineHelpText>
    <label>Other Changes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>