unpackaged/main/default/objects/Policy_Implementation__c/fields/Overall_Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Overall_Completion_Percentage__c</fullName>
    <label>Overall Completion Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>