unpackaged/main/default/objects/Policy_Implementation__c/fields/Overall_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Completion_Status__c</fullName>
    <label>Overall Completion Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>