unpackaged/main/default/objects/Policy_Implementation__c/fields/Partner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Partner_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Notes</label>
    <length>3500</length>
    <type>Html</type>
</CustomField>