unpackaged/main/default/objects/Policy_Implementation__c/fields/Peer_Review__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer Review</label>
    <type>Checkbox</type>
</CustomField>