unpackaged/main/default/objects/Policy_Implementation__c/fields/PFML__c.field-meta.xml
<CustomField>
    <fullName>PFML__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PFML</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>