unpackaged/main/default/objects/Policy_Implementation__c/fields/Plan_Month_Change__c.field-meta.xml
<CustomField>
    <fullName>Plan_Month_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes a plan month change</description>
    <label>Plan Month Change</label>
    <type>Checkbox</type>
</CustomField>