unpackaged/main/default/objects/Policy_Implementation__c/fields/Policy_Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Implementation_Status__c</fullName>
    <description>Status of Policy Implementation</description>
    <formula>TEXT( Case__r.Policy_Implementation_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Implementation Status</label>
    <type>Text</type>
</CustomField>