unpackaged/main/default/objects/Policy_Implementation__c/fields/Policy_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Service_Status__c</fullName>
    <formula>IF( 
  Number_of_Lives__c &lt;= 50,0,IF (AND(Number_of_Lives__c &gt; 50, Number_of_Lives__c &lt;= 100 ),0.5,
 IF (AND(Number_of_Lives__c &gt; 100, Number_of_Lives__c &lt;= 150), 1, IF (AND(  Number_of_Lives__c &gt; 150, 
   Number_of_Lives__c &lt;= 200),1.5, IF( 
  Number_of_Lives__c &gt; 300, 3, 2.5))
   )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Service Status</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>