unpackaged/main/default/objects/Policy_Implementation__c/fields/Prepare_Master_App_in_Docfinity__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Master_App_in_Docfinity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Prepare Master App in OIT</inlineHelpText>
    <label>Prepare Master App in Docfinity</label>
    <type>TextArea</type>
</CustomField>