unpackaged/main/default/objects/Policy_Implementation__c/fields/Prepare_Master_App_in_Docfinity_Date__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Master_App_in_Docfinity_Date__c</fullName>
    <description>This field contains date against Prepare Master App.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prepare Master App in Docfinity Date</label>
    <type>DateTime</type>
</CustomField>