unpackaged/main/default/objects/Policy_Implementation__c/fields/Prepare_Ntake_Manual_Census_Load__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Ntake_Manual_Census_Load__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Prepare NTAKE file to have members added or manually
enter census.</inlineHelpText>
    <label>Prepare Ntake/Manual Census Load</label>
    <type>TextArea</type>
</CustomField>