unpackaged/main/default/objects/Policy_Implementation__c/fields/Prepare_Ntake_Manual_Census_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Ntake_Manual_Census_Load_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prepare Ntake/Manual Census Load Date</label>
    <type>DateTime</type>
</CustomField>