unpackaged/main/default/objects/Policy_Implementation__c/fields/Prior_Carrier_Bill__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carrier_Bill__c</fullName>
    <description>This field shows status of  Prior Carrier Bill and contains Gate 2 Information.</description>
    <label>Prior Carrier Bill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>