unpackaged/main/default/objects/Policy_Implementation__c/fields/Prior_Carrier_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carrier_Bill_Date__c</fullName>
    <description>This field contains the date against Prior Carrier Bill field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Carrier Bill Date</label>
    <type>DateTime</type>
</CustomField>