unpackaged/main/default/objects/Policy_Implementation__c/fields/Prior_Carrier_Documents__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carrier_Documents__c</fullName>
    <description>Prior Carrier forms/booklet etc</description>
    <inlineHelpText>Prior Carrier froms/booket, etc</inlineHelpText>
    <label>Prior Carrier Documents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>