unpackaged/main/default/objects/Policy_Implementation__c/fields/Prior_Carrier_Policy_Booklet__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carrier_Policy_Booklet__c</fullName>
    <description>This field contains Gate2 Information</description>
    <label>Prior Carrier Policy/Booklet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>