unpackaged/main/default/objects/Policy_Implementation__c/fields/Proof_Roster_Against_Census__c.field-meta.xml
<CustomField>
    <fullName>Proof_Roster_Against_Census__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Check NTAKE/roster against the census</inlineHelpText>
    <label>Proof Roster Against Census</label>
    <type>TextArea</type>
</CustomField>