unpackaged/main/default/objects/Policy_Implementation__c/fields/Proof_Roster_Against_Census_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_Roster_Against_Census_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proof Roster Against Census Date</label>
    <type>DateTime</type>
</CustomField>