unpackaged/main/default/objects/Policy_Implementation__c/fields/Proposal_Received__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Received__c</fullName>
    <description>This field contains Gate1 information</description>
    <label>Proposal Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>