unpackaged/main/default/objects/Policy_Implementation__c/fields/QA_Review_Implementation_notes__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Implementation_notes__c</fullName>
    <description>QA review notes from implementation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Review Implementation notes</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>