unpackaged/main/default/objects/Policy_Implementation__c/fields/QA_Review_Scrub__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Scrub__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Review Scrub notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>