unpackaged/main/default/objects/Policy_Implementation__c/fields/QA_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>QA_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is doing the QA Review</description>
    <label>QA Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Policy_Implementations1</relationshipName>
    <type>Lookup</type>
</CustomField>