unpackaged/main/default/objects/Policy_Implementation__c/fields/Rate_Guaranteed_Years__c.field-meta.xml
<CustomField>
    <fullName>Rate_Guaranteed_Years__c</fullName>
    <description>This field contains Gate 2 information.</description>
    <label>Rate Guaranteed __ Years</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>