unpackaged/main/default/objects/Policy_Implementation__c/fields/Rate_Guaranteed_years_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Guaranteed_years_Date__c</fullName>
    <description>This field contains the date against Rate guaranteed __ years Date field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Guaranteed __ years Date</label>
    <type>DateTime</type>
</CustomField>