unpackaged/main/default/objects/Policy_Implementation__c/fields/Reduction_Schedule_Change__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Schedule_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes change in reduction schedule</description>
    <label>Reduction Schedule Change</label>
    <type>Checkbox</type>
</CustomField>