unpackaged/main/default/objects/Policy_Implementation__c/fields/Rehire_Provision_Change__c.field-meta.xml
<CustomField>
    <fullName>Rehire_Provision_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Amendment includes rehire provision change</description>
    <label>Rehire Provision Change</label>
    <type>Checkbox</type>
</CustomField>