unpackaged/main/default/objects/Policy_Implementation__c/fields/Release_Review__c.field-meta.xml
<CustomField>
    <fullName>Release_Review__c</fullName>
    <description>QA Release Review approved or request resubmission</description>
    <inlineHelpText>QA Release Review approved or request Resubmission</inlineHelpText>
    <label>Release Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Resubmit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>