unpackaged/main/default/objects/Policy_Implementation__c/fields/Renewal_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Renewal Date Change</description>
    <inlineHelpText>Renewal Date Change</inlineHelpText>
    <label>Renewal Date Change</label>
    <type>Checkbox</type>
</CustomField>