unpackaged/main/default/objects/Policy_Implementation__c/fields/Replacement_of_prior_coverage__c.field-meta.xml
<CustomField>
    <fullName>Replacement_of_prior_coverage__c</fullName>
    <description>This field contains Gate2 Information.</description>
    <label>Replacement of prior coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Continue/Don’t Submit</fullName>
            </value>
            <value>
                <fullName>Continue/Submit</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>