unpackaged/main/default/objects/Policy_Implementation__c/fields/Replacement_of_prior_coverage_Date__c.field-meta.xml
<CustomField>
    <fullName>Replacement_of_prior_coverage_Date__c</fullName>
    <description>This field contains the date against Replacement of prior coverage field which belongs to Gate2.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Replacement of prior coverage Date</label>
    <type>DateTime</type>
</CustomField>