unpackaged/main/default/objects/Policy_Implementation__c/fields/Review_Policies_Certificates_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Policies_Certificates_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Policies/Certificates Date</label>
    <type>DateTime</type>
</CustomField>