unpackaged/main/default/objects/Policy_Implementation__c/fields/Review_Policies_Certificates_Xpression__c.field-meta.xml
<CustomField>
    <fullName>Review_Policies_Certificates_Xpression__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Review Policies/Certificates in Xpression, and forward to
Policy Examiner/QA. Get Policy Examiner’s approval before
continuing</inlineHelpText>
    <label>Review Policies/Certificates Xpression</label>
    <type>TextArea</type>
</CustomField>