unpackaged/main/default/objects/Policy_Implementation__c/fields/Reviewing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reviewing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Business_Workspaces1</relationshipName>
    <type>Lookup</type>
</CustomField>