unpackaged/main/default/objects/Policy_Implementation__c/fields/Reviewing_Peer__c.field-meta.xml
<CustomField>
    <fullName>Reviewing_Peer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewing Peer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_Business_Workspaces</relationshipName>
    <type>Lookup</type>
</CustomField>